# langchain_work

./: .gitignore  01_langchain_assign.ipynb  01_langchain_exam.ipynb  02_langchain_assign.ipynb  02_langchain_exam.ipynb  03_langchain_exam.ipynb  04_langchain_exam.ipynb  04_langchain_exam2.ipynb  README.md  pyproject.toml  test.ipynb
chroma_db/: chroma.sqlite3
data/: samsung_KR.txt  skHynix_KR.txt
