[tool.poetry]
name = "langchain-env"
version = "0.1.0"
description = ""
authors = ["wizdmoon <wizd.mooncre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.14"
langchain = "0.2.16"
tiktoken = "0.7.0"
langchain-community = "0.2.16"
seaborn = "0.13.2"
langchain-chroma = "0.1.3"
langchain-openai = "0.1.23"
gradio = "4.44.0"
pypdf = "4.3.1"
bs4 = "0.0.2"
jq = "1.8.0"
transformers = "4.44.2"
langchain-experimental = "0.0.65"
langchain-huggingface = "0.0.3"
sentence-transformers = "3.1.0"
langchain-ollama = "0.1.3"
deepl = "1.18.0"
langdetect = "1.0.9"
faiss-cpu = "1.8.0.post1"
rank-bm25 = "0.2.2"
kiwipiepy = "0.18.1"
openpyxl = "3.1.5"
krag = "0.0.25"
langchain-anthropic = "0.1.23"
langchain-google-genai = "1.0.10"
langchain-groq = "0.1.10"
python-dotenv = "1.0.1"
onnxruntime = "1.16.3"
tokenizers = "0.19.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
